# xuanjian-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  check_syntax.py  config.json  demo.py  example.py  hermes_integration.py  main.py  pyproject.toml  requirements.txt  test_example.py  verify_failures.py
code_audit_fp/: __init__.py  models.py  server.py
code_audit_fp/filters/: __init__.py  base.py  context_filter.py  ml_filter.py  rule_filter.py
docs/: api-reference.md  architecture.md  deployment.md  java-rules.md  mcp-integration.md  web-dashboard.md
fp_sentinel/: __init__.py  _verify.py  cli.py  config.py  mcp_server.py  models.py  server.py
fp_sentinel/cli/: __init__.py
fp_sentinel/database/: __init__.py  connection.py  repositories.py
fp_sentinel/db/: __init__.py
fp_sentinel/filters/: __init__.py  baseline.py  context_filter.py  ml_filter.py  rule_filter.py
fp_sentinel/rules/: __init__.py
fp_sentinel/rules/java/: __init__.py  rules.py
fp_sentinel/rules/python/: __init__.py
fp_sentinel/scanners/: __init__.py  bandit_scanner.py  base.py  findsecbugs_scanner.py  manager.py  normalizer.py  semgrep_scanner.py
fp_sentinel/utils/: __init__.py  fingerprint.py
fp_sentinel/web/: __init__.py  app.py
fp_sentinel/web/static/: app.js  index.html  style.css
fp_sentinel/web/templates/: index.html
tests/: __init__.py  test_fp_sentinel.py
